code-examples/getting-started/tutorials/network-policies/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: hashicorp/http-echo
          args: [ "-listen=:80", "-text=\"hello world\""]
