code-examples/getting-started/tutorials/network-policies/default-deny-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace:  otterize-demo-npol
spec:
  podSelector: {}
  policyTypes:
    - Ingress
